--- a/student_systeam/src/Styles/header.css
+++ b/student_systeam/src/Styles/header.css
@@ -77,7 +77,7 @@
   
   .wrapper .main_content .headera {
     padding: 20px;
-    background-color: #333;
+    background-color: #0084b4;
     color: #717171;
     border-bottom: 1px solid #e0e4e8;
     position: sticky;
@@ -150,7 +150,7 @@
   .menupp {
     list-style-type: none;
     padding: 0;
-    background-color:rgba(255, 255, 255, 0);
+    background-color:#0084b4;
     overflow: hidden;
     font-family: Verdana, sans-serif;
     float: right;
@@ -168,12 +168,12 @@
     color: rgb(167, 160, 160);
   }
   .actively {
-    color: rgb(116, 116, 116);
+    color: rgb(255, 255, 255);
   }
   
   .header {
     /*padding: 10px;*/
-    background-color: #333; background-size: cover;
+    background-color: #0084b4; background-size: cover;
     height: 120px;
     position: relative;
   }
@@ -205,7 +205,7 @@
     top: 20px;
     left: 80.5%;
     font-size: 15px;
-    color: rgb(218, 213, 213);
+    color: rgb(255, 255, 255);
   }
   
   #logott{
